css/style.css
*{
    margin:0;
    padding:0;
    box-sizing: border-box;
}

body{
    height: 100vh;
    background: linear-gradient(180deg, #009688 15%, #D9DBD4 15%);
    display: flex;
    justify-content: center;
    align-items: center;
}
/* contenitore dell'app */
.app-container{
    width: 60%;
    min-width: 500px;
    height: 90vh;
    background-color: white;
    display: flex;
}
/* utilities */
i, input, .avatar-profile{
    cursor: pointer;
    
}

i:hover{
    color:rgb(46, 46, 46)
}
/* sezione contatti */
.avatar-section{
    display: flex;
    flex-direction: column;
}

.my-avatar, .notification{
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.my-avatar{
    background-color: #EAEAEA;
}

.avatar-icons, .chat-contact{
    color: #B1B1B1;
}

.contact{
    border-bottom:1px solid #d8d2d2
}

.notification{
    font-size: 12px;
    background-color: #8EDAFC;
    padding: 10px 0;
}

.notification-icon{
    background-color: #F2FBFF;
    border-radius: 50%;
    text-align: center;
    padding: 7px 0;
    width: 2rem;
    height: 2rem;
}

.avatar-profile img{
    width: 50px;
    height: 50px;
    border-radius: 50%;
}

.users{
    overflow-y: auto;
    overflow-x: hidden;
    height: 70%;
}
/* input ricerca */
.searchbar{
    width: 95%;
    margin: 3px auto;
}
.has-search .form-control {
    padding-left: 2.375rem;
}

.has-search .form-control-feedback {
    position: absolute;
    z-index: 2;
    display: block;
    width: 2.375rem;
    height: 2.375rem;
    line-height: 2.375rem;
    text-align: center;
    pointer-events: none;
    color: #aaa;
}
/* sezione contatti sinistra */
.hide{
    display: none;
}

.show{
    display:block
}

.thumb{
    font-size: 12px;
    white-space: nowrap;
    width: 90%;
    color: #929090;
}
.slide-left:hover {
    animation:slide-left 5s cubic-bezier(0.250, 0.460, 0.450, 0.940) infinite alternate both;
}

.avatar-profile:hover{
    background-color:#E9EBEB
}
/* sezione messaggi */
.message-section{
    background-image: url(../img/mine.jpg);
    position: relative;
    /* height: 100%; */
}

/* chat */
.chat-section{
    height:87%;
    overflow-y: auto;
}

.received-msg{
    margin: 20px 55px;
    background-color: white;
    padding: 15px;
    border-radius: 1rem;
}

.sent-msg{
    margin: 20px 55px;
    background-color: #D5F9BA;
    padding: 15px;
    border-radius: 1rem;
    justify-self: end;
}

.data-msg{
    font-size: 10px;
    margin-left: 40px;
    position: relative;
    top: 10px;
}

.input-message{
    background-color: #F3EDEA;
    position: absolute;
    bottom: 0;
    width: 100%;
    padding: 4px 0;
}

.dropdown-arrow{
    display:none
}

.msg:hover .dropdown-arrow{
    display: inline;
}

.msg{
    word-wrap: break-word;
}

@media screen and (max-height : 600px) {
    .users{
        height: 50%;
    }
    .chat-section{
        height: 70%;
    }
    
}

@media screen and (max-height : 320px) {
    .users{
        height: 20%;
    }
}

@media screen and (max-height : 210px) {
    .users{
       display: none;
    }
    .chat-section{
        height: 30%;
    }
    
}


  @keyframes slide-left {
    0% {
              transform: translateX(0);
    }
    100% {
              transform: translateX(-100px);
    }
  }
  

